# buildbybricks

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  Caddyfile  Dockerfile  Makefile  README.md  TEST_SETUP.md  docker-compose.yml  pyproject.toml
apps/: README.md
apps/agentic-rag-demo/: app_profile.json  evaluation_cases.json
apps/software-factory/: app_profile.json  architecture_sheet.schema.json  evaluation_cases.json  llm_profiles.yaml
data/sample/: agentic_rag_basics.md
docs/: README.md  buildbybricks_specification_driven_development.md  workflow-runtime-first-slice.md  workflow-step-types.md
docs/templates/: WO_FIX_TEMPLATE.md
docs/todos/: django-workflow-store-migration.md  kapitelweise-architektur-erzeugung.md
frontend/: app.js  index.html  styles.css
observability/prometheus/: prometheus.yml
scripts/: smoke_test.py
src/agentic_rag_template/: __init__.py  app.py  config.py  observability.py
template/: app_profile.json  evaluation_cases.json
tests/: test_agent_tools.py  test_answering.py  test_applications.py  test_architecture_artifacts.py  test_architecture_generation_jobs.py  test_architecture_job_store.py  test_architecture_sheet_generator.py  test_architecture_worker.py  test_configuration.py  test_configured_agent.py  test_embeddings_and_vector_store.py  test_evaluation.py  test_ingestion.py  test_llm_providers.py  test_observability.py  test_project_skeleton.py  test_retriever.py  test_software_factory_bootstrap.py  test_template_config.py  test_workflow_admin_api.py  test_workflow_runtime.py  test_workflow_store.py
(+83 files in other folders)
